--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="./assets/avatar.png" alt="gato sleepando" />
+        <img src="./assets/avatar.png" alt="gato dormindo" />
         <p>@вGash</p>
       </div>
       <div id="switch" onclick="toggleMode()">
@@ -28,16 +28,16 @@
       <div id="links">
         <ul>
           <li>
-            <a href="#" target="_blank">Nada</a>
+            <a href="#" target="_blank">Inscreva-se no NLW</a>
           </li>
           <li>
-            <a href="#" target="_blank">Nada 2</a>
+            <a href="#" target="_blank">Baixe meu e-book</a>
           </li>
           <li>
-            <a href="#" target="_blank">Nada como exemplo</a>
+            <a href="#" target="_blank">Veja meu portfólio</a>
           </li>
           <li>
-            <a href="#" target="_blank">Nada pra finalizar</a>
+            <a href="#" target="_blank">Conheça o Explorer</a>
           </li>
         </ul>
       </div>
